@@ -18,7 +18,7 @@ static int vals[] = {
 	32, 32, 32, 32,		/* set 32 */
 	32, 30, 28, 26,		/* down 2 */
 	26, 29, 32, 35,		/* up 3 */
-	35, 38, 41, 44		/* memory */
+	35, 35, 35, 35		/* should not have memory */
 };
 
 TEST(test_effect_volslide)
@@ -26,7 +26,8 @@ TEST(test_effect_volslide)
 	xmp_context opaque;
 	struct context_data *ctx;
 	struct xmp_frame_info info;
-	int i;
+	char tmp[32];
+	unsigned i;
 
 	opaque = xmp_create_context();
 	ctx = (struct context_data *)opaque;
@@ -60,10 +61,11 @@ TEST(test_effect_volslide)
 	/* play it */
 	xmp_start_player(opaque, 44100, 0);
 
-	for (i = 0; i < 16 * 4; i++) {
+	for (i = 0; i < ARRAY_SIZE(vals); i++) {
 		xmp_play_frame(opaque);
 		xmp_get_frame_info(opaque, &info);
-		fail_unless(info.channel_info[0].volume == vals[i], "volume slide error");
+		snprintf(tmp, sizeof(tmp), "volume slide error %u", i);
+		fail_unless(info.channel_info[0].volume == vals[i], tmp);
 
 	}
 
